Fixed horizontal scroll

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,7 @@ body, html, #root {
 body {
   background-color: $background-surface;
   font-family: $font-primary;
+  overflow-x: hidden;
 }
 
 * {
